--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ git = "https://github.com/bjz/gl-rs"
 
 [dependencies.sdl2]
 git = "https://github.com/AngryLawyer/rust-sdl2"
-features = ["image"]
+features = ["image", "ttf"]
 
 [dependencies]
 specs = "0.19.0"
